# IBO

./: .env.example  .gitignore  .gitmodules  README.md  audit.md  foundry.toml  remappings.txt
evm/: foundry.toml
evm/scripts/: Deploy.s.sol
evm/src/: Auxiliary.sol  Basket.sol  BasketL2.sol  Router.sol  mockToken.sol
evm/test/: Router.t.sol
frontend/landing/: index.html
frontend/public/: index.html
frontend/src/: Routes.js  index.js
java/: gradle.properties  local.properties  settings.gradle
java/app/: build.gradle
next/publishing/: package.json  pnpm-lock.yaml
old-frontend/: package.json
old-frontend/src/: App.js
quid.io/: package.json  tsconfig.json
quid.io/config/: webpack.config.js
quid.io/src/: App.js  App.scss  Routes.js  index.js
react/daemon/: watcher.js  (+1 more)
script/: Deploy.s.sol
scripts/: Deploy.s.sol
src/: Auxiliary.sol  Basket.sol  GD.sol  L2GD.sol  MOulinette.sol  Mindwill.sol  QD.sol  Router.sol  mockToken.sol  mockVault.sol
svm/: Anchor.toml  keypair.json  note.txt  package.json  switchboard.js
svm/programs/quid/: Cargo.toml
svm/programs/quid/src/: casa.rs  case.rs  etc.rs  lib.rs  state.rs  stay.rs
svm/programs/quid/src/lib/: casa.rs  ctx.rs  etc.rs  event.rs  flag.rs  flip.rs  gate.rs  inst.rs  levy.rs  math.rs  mod.rs  state.rs  stay.rs  tape.rs
svm/programs/quid/src/lib/lieb/: clutch.rs  entra.rs  mod.rs  out.rs
svm/programs/quid/src/lieb/: bardo.rs  clutch.rs  entra.rs  inst.rs  mod.rs  out.rs
test/: MainnetFork.t.sol  Router.t.sol
thuggable/: build_all.sh  build_all_backup.sh  go.mod  go.sum  main.go
(+164 files in other folders)
